assets/css/style.scss
/* ... */
figure {
  @include large {
    margin: 0.5em 20px !important;
  }

  @include medium {
    margin: 0.5em 15px !important;
  }

  @include small {
    margin: 0.5em 10px !important;
  }
}

#logo {
  margin: 0 0;
  padding-top: 0;
  float: right;
  height: 90px;
  
  @include small {
    display: none;
    height: 0px;
  }
}

#logo-news {
  margin: 0 0;
  height: 90px;
  padding-top: 0;
  
  @include small {
    display: none;
  }
}

//News intro text
.news-intro {
  padding-right: 50px;
}

//Collapse button
.collapse {
  @include large {
    position: absolute;
    top: 65px;
  }
  @include medium {
    position: absolute;
    top: 65px;
  }
}

//Logo containers
.first-header, .first-header-news {
  margin-top: 0;
  margin-bottom: 0;
  display: table;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  padding-top: 0;
}

//Logo container main
.first-header {
  height: 90px;
  @include small {
    height: 0; 
  }
}

//Logo container news
.first-header-news {
  display: flex;
}

//Bottom logo
#bottom-logo {
  margin-top: 1em;
  margin-bottom: 0;
  width: 50%;
  padding-top: 0;
}

//Intro text
.intro {
  @include small {
    font-size: 0.9em;
  }
}

#intro-table {
  @include large {
    font-size: 0.8em; //Custom
    margin-left: 20px; //Custom
  }

  @include medium {
    font-size: 0.7em; //Custom
    margin-left: 15px; //Custom
  }

  @include small {
    font-size: 0.5em; //Custom
    margin-left: 10px; //Custom
  }
}

//Paragraph in first section
.first-para {
  @include large {
    margin-left: 20px; //Custom
  }

  @include medium {
    margin-left: 15px; //Custom
  }

  @include small {
    margin-left: 10px; //Custom
  }
}

#intro-table th, #intro-table td {
  @include large {
    padding: 8px 20px !important;
  }

  @include medium {
    padding: 4px 8px !important;
  }

  @include small {
    padding: 4px 4px !important;
  }
}

//List items spacing
li {
  margin-top: 0.4em;
}

//Line section break
.line {
  width: 100%;
  height: 1px;
  background-color: #89b1da;
  margin-top: 1em;
  display:inline-block;
}

//Hide certain lines on large screen (divs in two columns)
@include large {
  .line-small {
    display:none !important;
  }
}

/* Contact submit form */
#contact-area {
  width: 100%;
  margin-top: 20px;
  font-size: 0.8em;
  margin-left: 1em;
}

#contact-area input, #contact-area textarea {
  padding: 3px;
  width: 90%;
  max-width: 900px;
  margin: 0px 0px 15px 0px;
  border: 2px solid #ccc;
}

#contact-area textarea:focus, #contact-area input:focus {
  border: 2px solid #57707d;
}

#contact-area .submit-button {
  width: 150px;
  float: left;
}

#contact-area label {
  float: left;
  text-align: left;
  margin-right: 10px;
  width: 150px;
  padding-top: 3px;
}

/* Search function */
.autocomplete-suggestions { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border: 1px solid #999; background: #FFF; cursor: default; overflow: auto; -webkit-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); -moz-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); }
.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; color: $body-link-color;}
.autocomplete-no-suggestion { padding: 2px 5px;}
.autocomplete-selected { background: #F0F0F0; }
.autocomplete-suggestions strong { font-weight: bold; color: $dark-blue; }
.autocomplete-group { margin-top: 10px; padding: 2px 5px; font-weight: bold; font-size: 1.2em; color: $section-headings-color; display: block; border-bottom: 1px solid $section-headings-color; }

.search-div {
  display: inline-flex;
  height: $button-height;
  
  @include large {
    width: 450px;
    margin-left: 1em;
    margin-right: 1em;
  }
  @include medium {
    width:80%;
    margin-top: 0.8em;
    margin-left: 0;
    margin-right: 0;
  }
  @include small {
    width:100%;
    margin-top: 0.8em;
    margin-left: 0;
    margin-right: 0;
  }
}

.search-box,.close-icon,.search-wrapper {
  position: relative;
}
.search-wrapper {
  width: 100%;
  margin-right: 0 !important;
  margin-left: 0 !important;
}
.search-box {
  width: 100%;
  height: $button-height;
  outline: 0;
  margin-right: 0 !important;
  margin-left: 0 !important;
  border-width: 2px;
  color: $body-text-color;
  padding: 0 0.5em;
  border-top-right-radius: 0px !important;
  border-top-left-radius: 6px !important;
  border-bottom-right-radius: 0px !important;
  border-bottom-left-radius: 6px !important;
  -webkit-border-top-right-radius: 0px !important;
  -webkit-border-top-left-radius: 6px !important;
  -webkit-border-bottom-right-radius: 0px !important;
  -webkit-border-bottom-left-radius: 6px !important;
  -moz-border-radius-topright: 0px !important;
  -moz-border-radius-topleft: 6px !important;
  -moz-border-radius-bottomright: 0px !important;
  -moz-border-radius-bottomleft: 6px !important;
}

.close-icon {
  border:1px solid transparent;
  background-color: transparent;
  display: inline-block;
  vertical-align: middle;
  outline: 0;
  cursor: pointer;
  position: absolute;
  right: 0;
  top: calc(#{$button-height} / 2);
}

.close-icon:after {
  content: "X";
  font-family: Nunito !important;
  font-style: normal !important;
  font-weight: 700 !important;
  display: block;
  width: 15px;
  height: 15px;
  position: absolute;
  background-color: #FA9595;
  z-index:1;
  right: 5px;
  top: 0;
  bottom: 0;
  margin: auto;
  padding: 2px;
  border-radius: 50%;
  text-align: center;
  color: white;
  font-weight: normal;
  font-size: 11px;
  cursor: pointer;
}

.search-box:not(:valid) ~ .close-icon {
  display: none;
}

/* Menu */
#dropdown {
    position: fixed;
    top: 0.5em;
    right: 0.5em;
    width: 13em;
    z-index: 999;
}
/* ... */

